--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -54,5 +54,11 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.14.2</version>
+        </dependency>
     </dependencies>
 </project>
