--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -61,4 +61,21 @@
             <version>2.14.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>s{project.artifactId</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
