--- a/project/pom.xml
+++ b/project/pom.xml
@@ -61,6 +61,17 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.14.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
