feature:配置高德开发key

--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -15,3 +15,7 @@ spring:
     view:
       prefix: /templates/
       suffix: .html
+shortLink:
+  stats:
+    locale:
+      mapKey: 724a57789605be42e4f808b641f9e87f
