--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -19,3 +19,8 @@ shortLink:
   stats:
     locale:
       mapKey: 724a57789605be42e4f808b641f9e87f
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mapper/*.xml
