--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.14.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
