--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -11,6 +11,11 @@ spring:
       host: 127.0.0.1
       port: 6379
       password: 123456
+
 short-link:
   group:
     max-num: 20
+  flow-limit:
+    enable: true
+    time-window: 1
+    max-access-count: 30
