--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -11,14 +11,29 @@ spring:
       host: 127.0.0.1
       port: 6379
       password: 123456
+
   mvc:
     view:
       prefix: /templates/
       suffix: .html
 shortLink:
+  domain:
+    default: nurl.ink:8001
   stats:
     locale:
       mapKey: 724a57789605be42e4f808b641f9e87f
+
+rocketmq:
+#  name-server: common-rocketmq-dev.magestack.cn:9876
+  name-server: 192.168.43.91:9876
+  producer:
+    group: short-link_project-service_stats-save_pg_fyx
+    topic: short-link_project-service_topic_fyx
+    send-message-timeout: 2000
+    retry-times-when-send-failed: 1
+    retry-times-when-send-async-failed: 1
+  consumer:
+    group: short-link_project-service_stats-save_cg_fyx
 
 mybatis-plus:
   configuration:
