--- a/project/pom.xml
+++ b/project/pom.xml
@@ -89,6 +89,11 @@
             <version>${rocketmq-spring-boot-starter.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
