--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -1,21 +1,29 @@
 server:
   port: 8001
 spring:
+  application:
+    name: short-link-project
   datasource:
     # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     # ShardingSphere 配置文件路径
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
+
   data:
     redis:
       host: 127.0.0.1
       port: 6379
       password: 123456
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
   mvc:
     view:
       prefix: /templates/
       suffix: .html
+
 shortLink:
   domain:
     default: nurl.ink:8001
@@ -24,8 +32,8 @@ shortLink:
       mapKey: 724a57789605be42e4f808b641f9e87f
 
 rocketmq:
-#  name-server: common-rocketmq-dev.magestack.cn:9876
-  name-server: 192.168.43.91:9876
+  name-server: common-rocketmq-dev.magestack.cn:9876
+#  name-server: 192.168.43.91:9876
   producer:
     group: short-link_project-service_stats-save_pg_fyx
     topic: short-link_project-service_topic_fyx
@@ -39,3 +47,7 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*.xml
+
+logging:
+  level:
+    org.apache.rocketmq.remoting: OFF
